# boris

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  config.yaml  pyproject.toml  run.sh  stop.sh
boris/: __init__.py  __main__.py  config.py  diag.py
boris/core/: context.py  feedback.py  loop.py  orchestrator.py  state.py
boris/llm/: ollama.py
boris/memory/: linter.py  loader.py  writer.py
boris/skills/: base.py  calendar.py  garmin.py  music.py  registry.py  reminders.py  search.py
boris/stt/: whisper.py
boris/tts/: normalize.py  xtts.py
boris/vad/: silero.py
boris/wakeword/: detector.py
docs/: architecture.md  configuration.md  oauth-setup.md  setup.md  skills.md  wake-word-training.md
patches/: acoustics_scipy117.py  garminconnect_client.py
tests/: conftest.py
tests/integration/: test_llm.py
tests/unit/: test_config.py  test_context.py  test_memory_linter.py  test_memory_loader.py  test_memory_writer.py  test_orchestrator.py  test_orchestrator_execute.py  test_skills_base.py  test_skills_calendar.py  test_skills_garmin.py  test_skills_music.py  test_skills_reminders.py  test_skills_search.py
training/wakeword/: boris_model.yml  setup.sh  train.sh
