[project]
name = "boris"
version = "0.1.0"
description = "Boris — asistente de hogar local por voz"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ollama>=0.4",
    "faster-whisper>=1.0",
    "TTS>=0.22",
    "transformers>=4.40,<4.46",
    "openwakeword>=0.6",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "torch>=2.4,<2.6",
    "torchaudio>=2.4,<2.6",
    "scipy>=1.11",
    "aiohttp>=3.9",
    "garminconnect>=0.2",
    "spotipy>=2.23",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # long lines in prompts and log strings are intentional

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
